--- a/Linked_list.ipynb
+++ b/Linked_list.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,9 +19,9 @@
     "    while l1 or l2:\n",
     "        x = l1.val if l1 else 0\n",
     "        y = l2.val if l2 else 0\n",
-    "        _sum = x + y + carry\n",
-    "        carry = _sum // 10\n",
-    "        current.next = ListNode(_sum % 10)\n",
+    "        sum = x + y + carry\n",
+    "        carry = sum // 10\n",
+    "        current.next = ListNode(sum % 10)\n",
     "        current = current.next\n",
     "\n",
     "        if l1:\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
